--- a/app/index.html
+++ b/app/index.html
@@ -50,7 +50,6 @@
     </div>
 
     <div class="container">
-<stk-watchlist-panel></stk-watchlist-panel>
     <div ng-view=""></div>
     </div>
 
@@ -93,6 +92,8 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/services/watchlist-service.js"></script>
         <script src="scripts/directives/stk-watchlist-panel.js"></script>
+        <script src="scripts/controllers/dashboard.js"></script>
+        <script src="scripts/controllers/watchlist.js"></script>
         <!-- endbuild -->
 </body>
 </html>
