--- a/app/index.html
+++ b/app/index.html
@@ -16,38 +16,46 @@
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
   </head>
-  <body ng-app="stockDogApp">
+  <body ng-app="stockDogApp"  ng-controller="MainCtrl" >
     <!--[if lte IE 8]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div class="header">
-      <div class="navbar navbar-default" role="navigation">
-        <div class="container">
-          <div class="navbar-header">
-
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
-              <span class="sr-only">Toggle navigation</span>
+    <nav class="navbar navbar-inverse" role="navigation" ng-cloak>
+      <div class="conainter-fluid">
+        <div class="navigation-header">
+          <button type="button" class="navbar-toggle"
+          data-toggle="collapse" data-target = "#main-nav" >
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
-            </button>
-
-            <a class="navbar-brand" href="#/">stockDog</a>
-          </div>
-
-          <div class="collapse navbar-collapse" id="js-navbar-collapse">
-
-            <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Home</a></li>
-              <li><a ng-href="#/about">About</a></li>
-              <li><a ng-href="#/">Contact</a></li>
-            </ul>
-          </div>
-        </div>
+          </button>
+          <a class="navbar-brand" href="#">Stock Dog</a>
       </div>
-    </div>
+
+      <div class="collapse navbar-collapse" id="main-nav" >
+        <ul class="nav navbar-nav navbar-right">
+            <li ng-class="{active: activeView === 'dashboard'}">
+              <a href="/">Dashboard</a>
+            </li>
+            <li ng-class="{active: activeView === 'watchlist'}" class="dropdown">
+              <a href="/" class="dropdown-toggle" data-toggle="dropdown">Watchlist <b class="caret" ></b></a>
+              <ul class="dropdown-menu">
+                <li ng-if="!watchlists.length" class="dropdown-header">
+                  No list found
+                  </li>
+                  <li   ng-repeat="list in watchlists track by $index">
+                <a href="#/watchlist/{{list.id}}">{{list.name}}</a>
+                    </li>
+
+            </ul>
+            </li>
+        </ul>
+      </div>
+    </nav>
+
+
 
     <div class="container">
     <div ng-view=""></div>
@@ -94,6 +102,7 @@
         <script src="scripts/directives/stk-watchlist-panel.js"></script>
         <script src="scripts/controllers/dashboard.js"></script>
         <script src="scripts/controllers/watchlist.js"></script>
+        <script src="scripts/controllers/main.js"></script>
         <!-- endbuild -->
 </body>
 </html>
